#[[++

Copyright (C) 2024 Autodesk Inc.

All rights reserved.

Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions are met:
    * Redistributions of source code must retain the above copyright
      notice, this list of conditions and the following disclaimer.
    * Redistributions in binary form must reproduce the above copyright
      notice, this list of conditions and the following disclaimer in the
      documentation and/or other materials provided with the distribution.
    * Neither the name of the Autodesk Inc. nor the
      names of its contributors may be used to endorse or promote products
      derived from this software without specific prior written permission.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS 'AS IS' AND
ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
DISCLAIMED. IN NO EVENT SHALL AUTODESK INC. BE LIABLE FOR ANY
DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.


This file has been generated by the Automatic Component Toolkit (ACT) version 1.8.0-develop.

Abstract: This is an autogenerated CMakeLists file for the development of Library Wrapper for open62541 OPCUA Library.

Interface version: 1.2.0


]]

cmake_minimum_required(VERSION 3.5)

### The implementation of the Library Wrapper for open62541 OPCUA Library component
project(LibOpen62541)

set (CMAKE_CXX_STANDARD 11)

# The location of autogenerated interfaces
set(CMAKE_CURRENT_AUTOGENERATED_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Interfaces)

file(GLOB LIBOPEN62541_SRC
	${CMAKE_CURRENT_SOURCE_DIR}/Implementation/*.cpp
)
file(GLOB LIBOPEN62541_HDR
	${CMAKE_CURRENT_SOURCE_DIR}/Implementation/*.hpp
)
set(LIBOPEN62541_SRC ${LIBOPEN62541_SRC} ${LIBOPEN62541_SRC}
	${CMAKE_CURRENT_AUTOGENERATED_DIR}/libopen62541_interfaceexception.cpp
	${CMAKE_CURRENT_AUTOGENERATED_DIR}/libopen62541_interfacewrapper.cpp
	${CMAKE_CURRENT_AUTOGENERATED_DIR}/libopen62541_interfacejournal.cpp
)

add_library(libopen62541 SHARED ${LIBOPEN62541_SRC})
# Do not prefix the binary's name with "lib" on Unix systems:
set_target_properties(libopen62541 PROPERTIES PREFIX "" IMPORT_PREFIX "" )
# The following two properties are crucial to reduce the number of undesirably exported symbols
set_target_properties(libopen62541 PROPERTIES CXX_VISIBILITY_PRESET hidden)
set_target_properties(libopen62541 PROPERTIES VISIBILITY_INLINES_HIDDEN ON)
# This makes sure symbols are exported
target_compile_options(libopen62541 PRIVATE "-D__LIBOPEN62541_EXPORTS")
target_include_directories(libopen62541 PRIVATE ${CMAKE_CURRENT_AUTOGENERATED_DIR})
target_include_directories(libopen62541 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Implementation)
target_include_directories(libopen62541 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)


if(WIN32)
if (MSVC)
   target_link_libraries(libopen62541 ${CMAKE_CURRENT_SOURCE_DIR}/Lib/open62541.lib)
endif (MSVC)
endif (WIN32)

# Post-build step to copy the DLL to the specified directory
if(WIN32)
  add_custom_command(TARGET libopen62541 POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy
      "$<TARGET_FILE:libopen62541>"
      "${CMAKE_CURRENT_SOURCE_DIR}/../Resources/libopen62541-x64.dll"
  )
endif()
